radix-transactions/tests/assets/manifest_parser_error_invalid_argument_1.rtm
CALL_METHOD
    Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
    "lock_fee"
;
SET_COMPONENT_ROYALTY
    Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
    "method_with_no_package_royalty"
    Enum<0u8>()
;
SET_COMPONENT_ROYALTY
    Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
    "method_with_xrd_package_royalty"
    Enum<0u8>()

SET_COMPONENT_ROYALTY
    Address("component_sim1cpyavrltfeu9ppx24pcpvh93xf44sfjygtv6dgf6uq3cdwafl7f9rq")
    "method_with_usd_package_royalty"
    Enum<0u8>()
;
SET_COMPONENT_ROYALTY
    Address("component_sim1cp82800wk54kypxhkmgsxxzjwxe4wn47zkwcp9myrrj7lkxf07qjm0")
    "method_with_no_package_royalty"
    Enum<1u8>(
        Decimal("17")
    )
;
